Intento de solucionar los reportes 16.2

--- a/src/views/pdfs/stock.ejs
+++ b/src/views/pdfs/stock.ejs
@@ -226,7 +226,7 @@
                     {{else if (lte cantidad_disponible minimo_stock)}}
                         <span class="badge badge-warning">Bajo</span>
                     {{else}}
-                        <span class="badge badge-success">OK</span>
+                        <span class="badge badge-success">Disponible</span>
                     {{/if}}
                 </td>
                 <td class="valor-column">${{formatCurrency valorUnitario}}</td>
