Arreglo de detalles en impresoras

--- a/src/views/impresoras/impresoras.ejs
+++ b/src/views/impresoras/impresoras.ejs
@@ -277,7 +277,7 @@
             border-radius: 4px;
             font-size: 0.75rem;
             border: 1px solid #bc4ad3;
-            color: #495057;
+            color: #e1e7ec;
         }
 
         /* NUEVOS ESTILOS PARA TABLA COMPACTA */
