Intento de solucionar los reportes 16.8.9.0.3

--- a/src/views/dashboard/index.ejs
+++ b/src/views/dashboard/index.ejs
@@ -276,9 +276,7 @@
             
             <div class="sidebar-content">
                 <div class="text-center mb-4 py-3 border-bottom border-secondary">
-                    <center>
-                        <img src="/public/img/logo-fritz-web.webp" alt="logo" style="width: 65px; height: 50px;">
-                    </center>
+                    <center><img src="/img/logo-fritz-web.webp" alt="logoo" style="width: 65px; height: 50px;"></center>
                     <h4 class="mb-0 text-white fw-bold sidebar-text">FRITZ C.A</h4>
                     <small class="text-white sidebar-text">Sistema de Gestión</small>
                 </div>
